Fix z-index of menu overlay

--- a/shared/css/shared.css
+++ b/shared/css/shared.css
@@ -190,6 +190,7 @@ main::-webkit-scrollbar-thumb
         position: fixed;
         width: 100%;
         overflow-y: scroll;
+        z-index: 1;
     }
     .main-nav__wrapper::-webkit-scrollbar {
         width: 10px;
